[package]
name = "processors"
version = "0.1.0"
authors = ["sebastian pfluegelmeier <pfluegelmeier.s@gmx.at>"]
licence = "LGPL-3.0"
repository = "https://github.com/sebastianpfluegelmeier/processors"
descriptions = "Modular Audio Processors"
keywords = ["audio", "modular", "dsp", "synthesizer"]
readme = "README.md"

[lib]
name = "processors"
path = "./src/lib.rs"

[dependencies]
pcm-flow = "0.3.0"
sample = "0.9.0"
