[package]
name = "processors"
version = "0.2.1"
authors = ["sebastian pfluegelmeier <pfluegelmeier.s@gmx.at>"]
license = "LGPL-3.0"
repository = "https://github.com/sebastianpfluegelmeier/processors"
description = "Modular Audio Processors"
keywords = ["audio", "modular", "dsp", "synthesizer"]
readme = "README.md"

[lib]
name = "processors"
path = "./src/lib.rs"

[dependencies]
pcm-flow = "0.5.0"
sample = "0.9.0"
